external-crates/move/crates/move-compiler/tests/move_2024/old_spec/invalid_spec_schema_name.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 252
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/old_spec/invalid_spec_schema_name.move:2:5
  │
2 │     spec schema foo<T> {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', 'struct', or 'enum'
